Delete button added

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -88,6 +88,11 @@
                       <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button></a>
                     </div>
 
+                                                <div class="btn-group">
+                      <a href="{% url 'delete' pk=student.id %}">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button></a>
+                    </div>
+
                 </div>
               </div>
             </div>
